--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             text-align: center;
             min-height: 80px;
             position: relative;
-            transition: background 0.2s;
+            transition: background 0.2s, transform 0.2s;
         }
         .calendar-day.empty {
             background: transparent;
@@ -340,20 +340,92 @@
         .calendar-day.today {
             background: rgba(169, 117, 238, 0.5);
             font-weight: bold;
+            border: 2px solid rgba(104, 0, 241, 0.6);
         }
         .day-number {
             font-size: 1.1em;
         }
-        .day-with-deadline {
+        .calendar-day.deadline-day {
+            background: rgba(112, 197, 62, 0.5); /* Greenish background */
+            color: rgb(47, 92, 21);
+            font-weight: bold;
             cursor: pointer;
+            border: 2px solid rgba(112, 197, 62, 0.7);
         }
-        .day-with-deadline:hover {
-            background: rgba(169, 117, 238, 0.4);
+        .calendar-day.deadline-day:hover {
+            background: rgba(112, 197, 62, 0.7);
+            transform: scale(1.05);
         }
-        .deadline-dot {
-            width: 8px; height: 8px; background-color: #28a745;
-            border-radius: 50%; position: absolute;
-            bottom: 8px; left: 50%; transform: translateX(-50%);
+
+        /* CALENDAR MODAL STYLES */
+        #calendar-modal-overlay {
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.5);
+            backdrop-filter: blur(5px);
+            z-index: 105;
+            display: none;
+        }
+        #calendar-deadline-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 15px;
+            padding: 25px;
+            box-shadow: 0 5px 30px rgba(0, 0, 0, 0.25);
+            z-index: 110;
+            width: 90%;
+            max-width: 400px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            text-align: left;
+        }
+        #calendar-deadline-modal h3 {
+            color: rgba(104, 0, 241, 0.85);
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+        #deadline-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            max-height: 60vh;
+            overflow-y: auto;
+        }
+        #deadline-list li {
+            background: rgba(104, 0, 241, 0.08);
+            padding: 12px 15px;
+            border-radius: 8px;
+            margin-bottom: 8px;
+            color: #3A3A3A;
+            font-weight: 500;
+            border-left: 4px solid rgba(104, 0, 241, 0.5);
+        }
+        #calendar-modal-close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            border: none;
+            background: rgba(0,0,0,0.1);
+            color: #333;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 1;
+            transition: all 0.2s ease;
+        }
+        #calendar-modal-close-btn:hover {
+            background: rgba(0,0,0,0.2);
+            transform: scale(1.1);
         }
 
         /* --- MEDIA QUERIES FOR RESPONSIVENESS --- */
@@ -586,7 +658,16 @@
     </div> 
     <div id="calendar-grid"></div> 
    </div> 
-  </div> <!-- FOOTER NAVIGATION MENU --> 
+  </div> 
+  <!-- CALENDAR DEADLINE MODAL --> 
+  <div id="calendar-modal-overlay"></div> 
+  <div id="calendar-deadline-modal"> <button id="calendar-modal-close-btn">×</button> 
+   <h3>Deadlines for this Day</h3> 
+   <ul id="deadline-list"> 
+    <!-- Content will be injected by JS --> 
+   </ul> 
+  </div> 
+  <!-- FOOTER NAVIGATION MENU --> 
   <nav id="footer-menu"> 
    <div class="menu-item active" data-target="#voucher-generator-section"> <i class="fa-solid fa-receipt"></i> <span>Voucher</span> 
    </div> 
@@ -826,6 +907,7 @@
         const section = document.querySelector('#dress-order-section');
         if (!section) return;
 
+        const footerMenu = document.getElementById('footer-menu'); // Get footer menu
         const orderSystem = section.querySelector('#orderSystem');
         const orderList = section.querySelector('#orderList');
         const createOrderBtn = section.querySelector('#createOrderBtn');
@@ -970,6 +1052,7 @@
         function openImageEditor(albumType, imageObject, allImages = [], index = -1) {
             currentAlbumImages = allImages;
             currentImageIndex = index;
+            if (footerMenu) footerMenu.style.display = 'none';
             if (currentAlbumImages.length > 1) {
                 prevImageBtn.style.display = 'flex';
                 nextImageBtn.style.display = 'flex';
@@ -1010,7 +1093,9 @@
             tempCtx.restore(); ctx.clearRect(0, 0, editorCanvas.width, editorCanvas.height); editorCanvas.width = tempCanvas.width; editorCanvas.height = tempCanvas.height; ctx.drawImage(tempCanvas, 0, 0);
             if (activeTextObject) { updateTextEditorUIPosition(); }
         }
-        function closeImageEditor() { deactivateTextObject(); imageEditorOverlay.style.display = 'none'; imageEditor.classList.remove('visible'); currentEditingImageInfo = { orderId: null, albumType: null, imageId: null }; isDoodling = false; editorCanvas.classList.remove('doodle-mode'); drawingActions = []; prevImageBtn.style.display='none'; nextImageBtn.style.display='none'; }
+        function closeImageEditor() {
+            if (footerMenu) footerMenu.style.display = 'flex';
+            deactivateTextObject(); imageEditorOverlay.style.display = 'none'; imageEditor.classList.remove('visible'); currentEditingImageInfo = { orderId: null, albumType: null, imageId: null }; isDoodling = false; editorCanvas.classList.remove('doodle-mode'); drawingActions = []; prevImageBtn.style.display='none'; nextImageBtn.style.display='none'; }
         editorCloseBtn.addEventListener('click', closeImageEditor);
         colorPalette.addEventListener('click', (e) => { const swatch = e.target.closest('.color-swatch'); if (!swatch) return; currentColor = swatch.dataset.color; colorPalette.querySelector('.selected').classList.remove('selected'); swatch.classList.add('selected'); if (activeTextObject) { activeTextObject.color = currentColor; textEditorInput.style.color = currentColor; textEditorInput.style.webkitTextFillColor = currentColor; redrawCanvas(); } });
         addTextBtn.addEventListener('click', () => { deactivateTextObject(); isDoodling = false; doodleBtn.textContent = "Doodle"; editorCanvas.classList.remove('doodle-mode'); const center = screenToCanvasCoords({ clientX: canvasContainer.clientWidth / 2, clientY: canvasContainer.clientHeight / 2}); const newTextObject = { id: Date.now(), type: 'text', text: 'Enter Text', x: center.x, y: center.y, fontSize: 40, color: currentColor, rotation: 0, width: 200 }; drawingActions.push(newTextObject); activateTextObject(newTextObject); redrawCanvas(); });
@@ -1089,6 +1174,10 @@
         const monthYearDisplay = document.getElementById('month-year-display');
         const prevMonthBtn = document.getElementById('prev-month-btn');
         const nextMonthBtn = document.getElementById('next-month-btn');
+        const calendarDeadlineModal = document.getElementById('calendar-deadline-modal');
+        const calendarModalOverlay = document.getElementById('calendar-modal-overlay');
+        const deadlineList = document.getElementById('deadline-list');
+        const calendarModalCloseBtn = document.getElementById('calendar-modal-close-btn');
 
         let today = new Date();
         let currentMonth = today.getMonth();
@@ -1154,11 +1243,8 @@
                 dayCell.appendChild(dayNumber);
 
                 if (deadlines[dateStr]) {
-                    dayCell.classList.add('day-with-deadline');
+                    dayCell.classList.add('deadline-day');
                     dayCell.dataset.customers = deadlines[dateStr].join(', ');
-                    const dot = document.createElement('div');
-                    dot.classList.add('deadline-dot');
-                    dayCell.appendChild(dot);
                 }
 
                 calendarGrid.appendChild(dayCell);
@@ -1166,11 +1252,28 @@
         }
         
         calendarGrid.addEventListener('click', (e) => {
-            const dayCell = e.target.closest('.day-with-deadline');
+            const dayCell = e.target.closest('.deadline-day');
             if (dayCell && dayCell.dataset.customers) {
-                alert(`Deadlines for this day:\n- ${dayCell.dataset.customers.replace(/, /g, '\n- ')}`);
+                const customers = dayCell.dataset.customers.split(', ');
+                deadlineList.innerHTML = ''; // Clear previous list
+                customers.forEach(customer => {
+                    const li = document.createElement('li');
+                    li.textContent = customer;
+                    deadlineList.appendChild(li);
+                });
+                calendarDeadlineModal.style.display = 'block';
+                calendarModalOverlay.style.display = 'block';
             }
         });
+
+        function closeCalendarModal() {
+            calendarDeadlineModal.style.display = 'none';
+            calendarModalOverlay.style.display = 'none';
+        }
+
+        calendarModalCloseBtn.addEventListener('click', closeCalendarModal);
+        calendarModalOverlay.addEventListener('click', closeCalendarModal);
+
 
         prevMonthBtn.addEventListener('click', () => {
             currentMonth--;
@@ -1201,4 +1304,5 @@
     }
     </script> 
  
+
 </body></html>
